sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: package test is not a value
  while (test) {
         ^AlgBubbleSort1:10: error: package test is not a value
    if (ech==0) {test=false}
                 ^